# Zyra-ADAS

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/include/zyra/: depth_estimator.h  detection.h  detector.h  engine.h  fcw.h  ffi_api.h  frame.h  ipm.h  lane.h  lane_assist.h  lane_tracker.h  logging.h  object_tracker.h  road_seg.h  shadow_planner.h
android/app/src/main/cpp/include/zyra/internal/: nms.h  preprocess.h
android/app/src/main/cpp/src/: depth_estimator.cpp  detector.cpp  engine.cpp  fcw.cpp  ffi_api.cpp  lane.cpp  lane_assist.cpp  lane_tracker.cpp  logging.cpp  nms.cpp  object_tracker.cpp  preprocess.cpp  road_seg.cpp
android/app/src/main/kotlin/com/zyra/mobile/: MainActivity.kt
android/app/src/main/kotlin/com/zyra/mobile/zyra_mobile/: MainActivity.kt
assets/models/: depth_anything_v2_vits.ncnn.param  twinlitenet.ncnn.param  yolov8s.ncnn.param
lib/: main.dart
lib/app/: routes.dart  theme.dart
lib/core/: constants.dart
lib/core/assets/: asset_bootstrap.dart
lib/core/audio/: alert_audio_service.dart
lib/core/data/: session_controller.dart  trip_database.dart  trip_models.dart  trip_repository.dart
lib/core/ffi/: zyra_detection.dart  zyra_engine.dart  zyra_engine_provider.dart  zyra_native.dart
lib/core/permissions/: permissions_service.dart
lib/core/sensors/: ego_state.dart  gps_service.dart  imu_service.dart
lib/features/debug/presentation/: engine_debug_screen.dart
lib/features/depth/presentation/: depth_screen.dart
lib/features/depth/presentation/widgets/: depth_colormap_painter.dart
lib/features/drive/presentation/: drive_screen.dart
lib/features/drive/presentation/widgets/: advanced_lane_overlay_painter.dart  detection_overlay_painter.dart  driveable_area_overlay_painter.dart  fcw_banner.dart  fps_bar.dart  lane_assist_hud.dart  lane_overlay_painter.dart  shadow_l2_badge.dart  speed_hud.dart  status_bar.dart
lib/features/vehicle_select/application/: vehicle_profile_notifier.dart
lib/features/vehicle_select/data/: vehicle_profile.dart  vehicle_profile_repository.dart
lib/features/vehicle_select/presentation/: vehicle_select_screen.dart
lib/features/vehicle_select/presentation/widgets/: vehicle_card.dart
test/: widget_test.dart
